# MWM

./: .gitignore  AGENTS.md  README.md  README_surgwmbench.md  pyproject.toml  requirements.txt  requirements_torch.txt
configs/: surgwmbench_mwm.yaml  surgwmbench_mwm_1gpu.yaml
mwm_torch/: __init__.py  config.py  eval_surgwmbench.py  future_prediction.py  losses.py  metrics.py  train_surgwmbench.py  utils.py  visualize_surgwmbench.py
mwm_torch/data/: __init__.py  surgwmbench.py  validate_surgwmbench.py
mwm_torch/models/: __init__.py  dynamics.py  masked_autoencoder.py  mwm_surgwmbench.py
tests/: test_metrics.py  test_model_shapes.py  test_surgwmbench_dataset.py  test_surgwmbench_pipeline.py
